--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
+    "@chakra-ui/react": "^2.8.2",
+    "@mantine/core": "^7.12.0",
+    "@mantine/hooks": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
