--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
 {
   "devDependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@mantine/core": "^7.12.0",
-    "@mantine/hooks": "^7.12.0",
-    "axios": "^1.7.2",
-    "file-saver": "^2.0.5",
-    "npm": "^10.8.2",
-    "react-use-cookie": "^1.6.1"
+    "npm": "^10.8.2"
   }
 }
